src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_classes_tests__simple_class_without_name.snap
---
source: src/parser/tests/parse_errors/parse_error_classes_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected Identifier but found END_CLASS
  ┌─ <internal>:1:7
  │
1 │ CLASS END_CLASS
  │       ^^^^^^^^^ Unexpected token: expected Identifier but found END_CLASS
